tests/ui/assumptions_on_binders/principal-upcast-region-eq-issue-157859.stderr
error[E0277]: the trait bound `&dyn Sub: CoerceUnsized<&dyn Super<for<'a> fn(&'a ())>>` is not satisfied
  --> $DIR/principal-upcast-region-eq-issue-157859.rs:7:49
   |
LL |         let b: &dyn Super<for<'a> fn(&'a ())> = a;
   |                                                 ^ the nightly-only, unstable trait `Unsize<dyn Super<for<'a> fn(&'a ())>>` is not implemented for `dyn Sub`
   |
   = note: all implementations of `Unsize` are provided automatically by the compiler, see <https://doc.rust-lang.org/stable/std/marker/trait.Unsize.html> for more information
   = note: required for `&dyn Sub` to implement `CoerceUnsized<&dyn Super<for<'a> fn(&'a ())>>`
   = note: required for the cast from `&dyn Sub` to `&dyn Super<for<'a> fn(&'a ())>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
